# BioSim

./: Cargo.toml  config.ini
EvolutionSim/: Cargo.toml
EvolutionSim/src/: bench.rs  cell.rs  config.rs  gene.rs  grid.rs  main.rs  neuron.rs  population.rs  threadpool.rs
EvolutionSim/src/windowed/: mod.rs  shader.rs  window.rs
ProcEvolutionSim/: Cargo.toml
ProcEvolutionSim/src/: lib.rs
shaders/: background.vs  cell.fs  cell.vs  horizontal.vs  vertical.vs
src/: cell.rs  gene.rs  grid.rs  main.rs  neuron.rs  population.rs
src/windowed/: mod.rs  shader.rs  window.rs
threadpool/src/: lib.rs  work.rs
