[package]
name = "EvolutionSim"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.43.0"
gl = "0.14.0"
rand = "0.8.5"
ProcEvolutionSim = { path = "../ProcEvolutionSim" }
threadpool = { path = "../threadpool" }